--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@prisma/client": "^3.5.0",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-social": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-engine": "^1.0.1",
+    "font-awesome": "^4.7.0",
+    "http-proxy-middleware": "^2.0.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "mongoose": "^6.0.13",
     "next": "11.1.2",
+    "next-connect": "^0.11.0",
+    "pg": "^8.7.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
